# zephyr

./: EMERGENCY_FIX.sh  QUICK_FIX.md  README.md  RPI4_TSN_BUILD_SUMMARY.md  SIMPLE_TSN_BUILD.md  TSN_SUCCESS_REPORT.md  USB_TSN_COMPLETE_SETUP.md  VENV_FIX.md  WORKING_TSN_BUILD.md  fix_build.sh  fix_build_venv.sh  fix_dts_error.sh  up.md
.claude/: settings.local.json
boards/raspberrypi/rpi_4b/: rpi_4b.dts  rpi_4b_tsn.dts  rpi_4b_tsn_defconfig
boards/raspberrypi/rpi_4b/doc/: tsn_setup_guide.md
cmake/modules/: python_env.cmake
drivers/ethernet/: CMakeLists.txt  Kconfig  Kconfig.bcm2711  eth_bcm2711_gmac.c
dts/arm/broadcom/: bcm2711.dtsi
dts/arm64/broadcom/: bcm2711.dtsi
dts/bindings/ethernet/: brcm,bcm2711-genet.yaml
dts/bindings/ethernet/phy/: ethernet-phy-common.yaml
dts/bindings/mdio/: brcm,genet-mdio-v5.yaml
fresh_venv/: pyvenv.cfg
include/zephyr/net/: ieee802_1cb.h  ieee802_1qbv.h
samples/boards/raspberrypi/rpi_4b_tsn/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/boards/raspberrypi/rpi_4b_tsn/src/: benchmark.c  main.c  serial_comm.c  tsn_app.c  tsn_app_simple.c
samples/net/tsn/raspberry_pi_4b/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  DETAILED_USAGE_GUIDE.md  README.md  prj.conf
samples/net/tsn/raspberry_pi_4b/boards/: rpi_4b.overlay
samples/net/tsn/raspberry_pi_4b/src/: main.c  tsn_config.c  tsn_demo.c
samples/net/tsn_shell_demo/: USB_C_SERIAL_GUIDE.md  prj.conf
samples/net/tsn_shell_demo/boards/: rpi_4b.conf  rpi_4b.overlay
samples/net/tsn_shell_demo/src/: main.c  tsn_commands.c
scripts/: requirements-rpi.txt  setup_rpi_env.sh
subsys/net/l2/: CMakeLists.txt  Kconfig  Kconfig.ieee802_tsn  ieee802_1cb.c  ieee802_1qbv.c
